# autogenu-jupyter

./: .gitignore  .gitmodules  .travis.yml  2linkanimation.py  AutoGenU.ipynb  CMakeLists.txt  LICENSE  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  appveyor.yml  cartpole.ipynb  cartpole_2ocp_8hpp.html  cartpole_2ocp_8hpp.js  cartpole_2ocp_8hpp__incl.map  cartpole_2ocp_8hpp__incl.md5  cartpole_2ocp_8hpp_source.html  cartpole__external__reference_2ocp_8hpp.html  cartpole__external__reference_2ocp_8hpp.js  cartpole__external__reference_2ocp_8hpp__incl.map  cartpole__external__reference_2ocp_8hpp__incl.md5  cartpole__external__reference_2ocp_8hpp_source.html  classcgmres_1_1_horizon-members.html  classcgmres_1_1_horizon.html  classcgmres_1_1_horizon.js  classcgmres_1_1_logger-members.html  classcgmres_1_1_logger.html  classcgmres_1_1_logger.js  classcgmres_1_1_multiple_shooting_c_g_m_r_e_s_solver-members.html  classcgmres_1_1_multiple_shooting_c_g_m_r_e_s_solver.html  classcgmres_1_1_multiple_shooting_c_g_m_r_e_s_solver.js  classcgmres_1_1_o_c_p__cartpole-members.html  classcgmres_1_1_o_c_p__cartpole.html  classcgmres_1_1_o_c_p__cartpole.js  classcgmres_1_1_o_c_p__cartpole_external_reference-members.html  classcgmres_1_1_o_c_p__cartpole_external_reference.html  classcgmres_1_1_o_c_p__cartpole_external_reference.js  classcgmres_1_1_o_c_p__hexacopter-members.html  classcgmres_1_1_o_c_p__hexacopter.html  (+319 more)
AutoGenU/: animation_generator.py  basic_symbolic_func.py  cpp_executor.py  cpp_generator.py  initialization_params.py  simulation_conditions.py  simulation_params.py  simulation_plottor.py  solver_params.py
AutoGenU_modules/: cpp_executor.py  cpp_generator.py  simulation_plottor.py  solver_params_sets.py
autogenu/: __init__.py  animation_generator.py  animator.py  autogenu.py  cpp_executor.py  cpp_generator.py  initialization_parameters.py  install_python_interface.py  integrator.py  logger.py  plot_simulation.py  plotter.py  simulation_conditions.py  simulation_parameters.py  simulation_plottor.py  solver_parameters.py  solver_params.py  symbolic_funcs.py  symbolic_functions.py  symfunc.py  symutils.py
ci/: test_notebooks.py
cmake/: cgmres-config.cmake.in
codeGen/: .gitignore  README.md  basic_symbolic_func.py  codeGenforNMPC.ipynb  generate_cpp_codes.py
doc/: Doxyfile
examples/: CMakeLists(in_root_dir).txt
examples/cpp/cartpole_external_reference/: CMakeLists.txt  main.cpp  ocp.hpp
examples/cpp/pendubot/: CMakeLists.txt  main.cpp  ocp.hpp
include/: continuation_gmres.h  continuation_gmres.hpp  control_input_saturation.hpp  matrixfree_gmres.h  matrixfree_gmres.hpp  mayataka_nmpc.hpp  model.h  (+9 more)
src/: .newton_gmres.cpp.swp  CMakeLists.txt  NMPC.cpp  NMPCsolver.cpp  a.out  cartpole.cpp  cgmres_initializer.cpp  continuation_gmres.cpp  continuation_gmres.hpp  control_input_saturation.cpp  control_input_saturation.hpp  control_input_saturation_sequence.cpp  control_input_saturation_sequence.hpp  init_cgmres.cpp  init_cgmres.hpp  init_cgmres_with_saturation.cpp  init_cgmres_with_saturation.hpp  input_saturation.cpp  matrixfree_gmres.cpp  matrixfree_gmres.hpp  mayataka_nmpc.cpp  model(for user).cpp  ms_cgmres_with_input_saturation.cpp  ms_model.cpp  multiple_shooting_cgmres.cpp  multiple_shooting_cgmres.hpp  multiple_shooting_cgmres_with_saturation.cpp  multiple_shooting_cgmres_with_saturation.hpp  multiple_shooting_with_saturation.cpp  multiple_shooting_with_saturation.hpp  newton_gmres.cpp  newton_gmres.hpp  nmpc_solver.cpp  nmpc_solver.hpp  numerical_integration.cpp  numerical_integrator.cpp  numerical_integrator.hpp  simulation.cpp  simulator.cpp  simulator.hpp  (+7 more)
src/simulator/: cgmres_simulator.cpp  cgmres_simulator.hpp  cgmres_simulator.hxx  cgmres_simulator_for_win.cpp  cgmres_simulator_for_win.hpp  cgmres_simulator_for_windows.cpp  cgmres_simulator_for_windows.hpp  make_save_dir_for_unix.cpp  make_save_dir_for_unix.hpp  make_save_dir_for_win.cpp  make_save_dir_for_win.hpp  mscgmres_with_saturation_simulator.cpp  mscgmres_with_saturation_simulator.hpp  multiple_shooting_cgmres_simulator.cpp  multiple_shooting_cgmres_simulator.hpp  multiple_shooting_cgmres_simulator_for_win.cpp  multiple_shooting_cgmres_simulator_for_win.hpp  multiple_shooting_cgmres_simulator_for_windows.cpp  multiple_shooting_cgmres_simulator_for_windows.hpp  multiple_shooting_cgmres_with_saturation_simulator.cpp  multiple_shooting_cgmres_with_saturation_simulator.hpp  multiple_shooting_cgmres_with_saturation_simulator_for_win.cpp  multiple_shooting_cgmres_with_saturation_simulator_for_win.hpp  multiple_shooting_cgmres_with_saturation_simulator_for_windows.cpp  multiple_shooting_cgmres_with_saturation_simulator_for_windows.hpp  numerical_integrator.cpp  numerical_integrator.hpp  save_simulation_data.cpp  save_simulation_data.hpp  save_simulation_data_for_windows.cpp  save_simulation_data_for_windows.hpp
src/solver/: cgmres_initializer.cpp  cgmres_initializer.hpp  condensing_functions.cpp  condensing_functions.hpp  continuation_gmres.cpp  continuation_gmres.hpp  control_input_saturation.cpp  control_input_saturation.hpp  control_input_saturation_sequence.cpp  control_input_saturation_sequence.hpp  init_cgmres.cpp  init_cgmres.hpp  init_cgmres_with_saturation.cpp  init_cgmres_with_saturation.hpp  init_mscgmres_with_saturation.cpp  init_mscgmres_with_saturation.hpp  input_saturation.cpp  input_saturation.hpp  input_saturation_functions.cpp  input_saturation_functions.hpp  input_saturation_set.cpp  input_saturation_set.hpp  linear_algebra.cpp  linear_algebra.hpp  linear_funcs.cpp  linear_funcs.hpp  matrixfree_gmres.cpp  matrixfree_gmres.hpp  ms_cgmres_with_input_saturation.cpp  ms_cgmres_with_input_saturation.hpp  ms_cgmres_with_input_saturation_initializer.cpp  ms_cgmres_with_input_saturation_initializer.hpp  ms_continuation_with_input_saturation.cpp  ms_continuation_with_input_saturation.hpp  ms_ocp_with_input_saturation.cpp  ms_ocp_with_input_saturation.hpp  mscgmres_with_saturation.cpp  mscgmres_with_saturation.hpp  multiple_shooting_cgmres.cpp  multiple_shooting_cgmres.hpp  (+19 more)
(+228 files in other folders)
